--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "firebase": "^9.15.0",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
+    "recoil": "^0.7.6",
     "typescript": "4.9.3"
   }
 }
