--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "@uiball/loaders": "^1.2.6",
     "firebase": "^9.15.0",
     "next": "13.0.5",
     "react": "18.2.0",
