--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.0.8",
     "@uiball/loaders": "^1.2.6",
     "firebase": "^9.15.0",
+    "framer-motion": "^8.1.9",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
