--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "next": "13.0.5",
     "next-cookies": "^2.0.3",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
     "recoil": "^0.7.6",
     "typescript": "4.9.3"
   },
   "devDependencies": {
-    "@types/cookie": "^0.5.1"
+    "@types/cookie": "^0.5.1",
+    "@types/uuid": "^9.0.0"
   }
 }
