--- a/package.json
+++ b/package.json
@@ -17,13 +17,21 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "@uiball/loaders": "^1.2.6",
+    "axios": "^1.3.3",
+    "cookie": "^0.5.0",
     "firebase": "^9.15.0",
-    "framer-motion": "^8.1.9",
+    "firebase-admin": "^11.5.0",
     "next": "13.0.5",
+    "next-cookies": "^2.0.3",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
     "recoil": "^0.7.6",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "@types/cookie": "^0.5.1",
+    "@types/uuid": "^9.0.0"
   }
 }
