--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
+    "@mui/lab": "^5.0.0-alpha.122",
     "@mui/material": "^5.10.12",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
