--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-youtube": "^10.1.0",
     "recoil": "^0.7.6",
     "typescript": "4.9.3"
   },
